# django_integration_tests

./: README.md  db.sqlite3  pyproject.toml  pytest.ini
.github/workflows/: main.yml
nc_tutorials/: settings.py  urls.py
tutorials/: tests.py  urls.py  views.py
users/: tests.py
