[project]
name = "django-testing"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Avery Freeman", email = "averyfreeman@gmail.com" }
]
dependencies = [
    "django==3.2.2",
    "djangorestframework==3.12.4",
    "gunicorn==20.0.4",
    "pytest==6.2.5",
    "pytest-django==4.4.0",
]
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
